<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="@dimen/abc_action_bar_default_height_material"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        tools:ignore="PrivateResource">



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_people"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/appInvite"
            android:layout_gravity="end"
            android:background="?android:attr/selectableItemBackground"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            tools:ignore="ContentDescription" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_below="@+id/tool_bar"
        android:layout_alignRight="@+id/snackbar_layout"
        android:layout_alignEnd="@+id/snackbar_layout">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="1"
    android:layout_gravity="center_horizontal">
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryDark"
        android:padding="10dp"
        android:layout_marginTop="20dp" />


    <TextView
        android:id="@+id/welcome_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorAccent"
        android:padding="10dp"
        android:layout_gravity="center_horizontal" />


</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcomeFB"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginTop="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/only_FB_F_see"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp" />

            <Button
                android:id="@+id/fb_invite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fbinvite_friends"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@color/colorAccent"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Invite_freind"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginTop="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/only_f_c_this"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp" />

            <Button
                android:id="@+id/invite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite_friends"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal|bottom"
                android:padding="10dp"
                android:background="@color/colorAccent" />

        </LinearLayout>



    </LinearLayout>
    <FrameLayout
        android:id="@+id/snackbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="16dp"/>

</RelativeLayout>
