<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.animalia.hassan.catsdailytips.fragmentsChoices.FragmentChoiceTwo">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cats_related_info_based_on_medical_references"
        android:textColor="@color/Choices_text_color"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textView2"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sc1_content"
        android:textColor="@color/Choices_text_color"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textAlignment="center" />


        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="center_horizontal|top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true"
            card_view:cardPreventCornerOverlap="false"
            android:layout_margin="10dp"
            card_view:cardBackgroundColor="@color/colorPrimaryDark"
            android:layout_marginTop="-10dp"
            android:layout_below="@+id/textView2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="30dp"
                android:paddingLeft="30dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:padding="10dp"
                android:paddingTop="40dp"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_questions"
                    android:textColor="@android:color/white"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/updated_on_regular_bases"
                    android:textColor="@android:color/white"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center_horizontal" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(If you are not sure ask your vet)"
                    android:textColor="@android:color/white"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>


