<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="12dp">

        <TextView

            android:id="@+id/tipTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questionTitle"
            android:layout_margin="@dimen/textview_margin"
            android:layout_marginStart="@dimen/h_text_margin_start"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textAllCaps="true"
            android:layout_marginLeft="@dimen/h_text_margin_start" />

        <TextView
            android:id="@+id/questionT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textview_margin"
            android:layout_marginStart="@dimen/s_text_margin_start"
            android:text="@string/why_do_dogs_howl"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginLeft="@dimen/s_text_margin_start" />

        <!--   <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/card_margin">

               <LinearLayout
                   style="@style/Widget.CardContent"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/tipTitle"
                       android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/why_do_dogs_howl" />

               </LinearLayout>

           </android.support.v7.widget.CardView>-->


        <TextView
            android:id="@+id/tipBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answerBody"
            android:layout_margin="@dimen/textview_margin"
            android:layout_marginStart="@dimen/h_text_margin_start"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textAllCaps="true"
            android:layout_marginLeft="@dimen/h_text_margin_start" />

        <TextView
            android:id="@+id/answert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textview_margin"
            android:layout_marginStart="@dimen/s_text_margin_start"
            android:text="@string/answerd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginLeft="@dimen/s_text_margin_start" />

        <!--    <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tipBody"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answerd" />

                </LinearLayout>

            </android.support.v7.widget.CardView>-->


        <TextView

            android:id="@+id/tipComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_comments_here"
            android:layout_margin="@dimen/textview_margin"
            android:layout_marginStart="@dimen/h_text_margin_start"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textAllCaps="true"
            android:layout_marginLeft="@dimen/h_text_margin_start" />

        <TextView

            android:id="@+id/comment1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textview_margin"
            android:layout_marginStart="@dimen/s_text_margin_start"
            android:text="@string/your_comments_here"
            android:background="@color/colorAccentTrans"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:padding="5dp"
            android:layout_marginLeft="@dimen/s_text_margin_start" />

        <!--  <android.support.v7.widget.CardView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="@dimen/card_margin"
              android:layout_marginLeft="@dimen/card_margin"
              android:layout_marginRight="@dimen/card_margin">

              <LinearLayout
                  style="@style/Widget.CardContent"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/your_comments_here"
                      android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/your_comments_here" />

              </LinearLayout>

          </android.support.v7.widget.CardView>-->

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
